{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 135,
  "lineage": "89cbafeb-02f8-9dde-3c08-619db6b14317",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dcvm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/networkInterfaces/dcvm-nic",
            "internal_domain_name_suffix": "5zaimaqwmz5uvd20cpmqi2j4ec.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dcvm-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/publicIPAddresses/dcvm-pip",
                "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/dcvm-vnet/subnets/dc-default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "dcvm-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "kml_rg_main-8917760fe90c4301"
          },
          "dependencies": [
            "azurerm_public_ip.dcvmpip",
            "azurerm_subnet.dc-default",
            "azurerm_virtual_network.dcvm-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "winvm-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/networkInterfaces/winvm-nic",
            "internal_domain_name_suffix": "quz4f2qeb4bepkde3yadanl3pe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "winvm-ipconfig",
                "primary": true,
                "private_ip_address": "20.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/publicIPAddresses/winvm-pip",
                "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/winvm-vnet/subnets/winvm-default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "winvm-nic",
            "private_ip_address": "20.0.0.4",
            "private_ip_addresses": [
              "20.0.0.4"
            ],
            "resource_group_name": "kml_rg_main-8917760fe90c4301"
          },
          "dependencies": [
            "azurerm_public_ip.winvmpip",
            "azurerm_subnet.winvm-default",
            "azurerm_virtual_network.winvm-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dcvmnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/networkSecurityGroups/dcvm-nsg",
            "location": "eastus",
            "name": "dcvm-nsg",
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "135",
                  "3268",
                  "3269",
                  "389",
                  "445",
                  "464",
                  "49152-65535",
                  "53",
                  "636",
                  "88"
                ],
                "direction": "Inbound",
                "name": "ADDC-TCP-IN",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "389",
                  "464",
                  "53",
                  "88"
                ],
                "direction": "Inbound",
                "name": "ADDC-UDP-IN",
                "priority": 1500,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP-allow",
                "priority": 4095,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "winvmnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/networkSecurityGroups/winvm-nsg",
            "location": "eastus",
            "name": "winvm-nsg",
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "135",
                  "3268",
                  "3269",
                  "389",
                  "445",
                  "464",
                  "49152-65535",
                  "53",
                  "636",
                  "88"
                ],
                "direction": "Outbound",
                "name": "ADDC-TCP-Outbound",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "389",
                  "445",
                  "464",
                  "53",
                  "88"
                ],
                "direction": "Outbound",
                "name": "ADDC-UDP-Outbound",
                "priority": 1500,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "20.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP-allow",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4094,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Deny-All-Outbound",
                "priority": 4094,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dcvmpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/publicIPAddresses/dcvm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.2.119",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dcvm-pip",
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "winvmpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/publicIPAddresses/winvm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.106.141.214",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "winvm-pip",
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dc-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/dcvm-vnet/subnets/dc-default",
            "name": "dc-default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "virtual_network_name": "dcvm-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.dcvm-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "winvm-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "20.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/winvm-vnet/subnets/winvm-default",
            "name": "winvm-default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "virtual_network_name": "winvm-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.winvm-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/dcvm-vnet/subnets/dc-default",
            "network_security_group_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/networkSecurityGroups/dcvm-nsg",
            "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/dcvm-vnet/subnets/dc-default"
          },
          "dependencies": [
            "azurerm_network_security_group.dcvmnsg",
            "azurerm_subnet.dc-default",
            "azurerm_virtual_network.dcvm-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-associate-winvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/winvm-vnet/subnets/winvm-default",
            "network_security_group_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/networkSecurityGroups/winvm-nsg",
            "subnet_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/winvm-vnet/subnets/winvm-default"
          },
          "dependencies": [
            "azurerm_network_security_group.winvmnsg",
            "azurerm_subnet.winvm-default",
            "azurerm_virtual_network.winvm-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dcvm-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "028640fe-6616-4a7f-8f9a-13d904713e22",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/dcvm-vnet",
            "location": "eastus",
            "name": "dcvm-vnet",
            "resource_group_name": "kml_rg_main-8917760fe90c4301"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "winvm-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f2e23385-0f04-4782-a864-ee0030357d7c",
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/winvm-vnet",
            "location": "eastus",
            "name": "winvm-vnet",
            "resource_group_name": "kml_rg_main-8917760fe90c4301"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "dcpeer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/dcvm-vnet/virtualNetworkPeerings/dcvmpeer",
            "name": "dcvmpeer",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/winvm-vnet",
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "use_remote_gateways": false,
            "virtual_network_name": "dcvm-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.dcvm-vnet",
            "azurerm_virtual_network.winvm-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "winvmpeer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/winvm-vnet/virtualNetworkPeerings/winvmpeer",
            "name": "winvmpeer",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/a2b28c85-1948-4263-90ca-bade2bac4df4/resourceGroups/kml_rg_main-8917760fe90c4301/providers/Microsoft.Network/virtualNetworks/dcvm-vnet",
            "resource_group_name": "kml_rg_main-8917760fe90c4301",
            "use_remote_gateways": false,
            "virtual_network_name": "winvm-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.dcvm-vnet",
            "azurerm_virtual_network.winvm-vnet"
          ]
        }
      ]
    }
  ]
}